Fixing GA and overflow scroll

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -151,7 +151,7 @@ $easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
 html,
 body {
   min-height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
 }
 
@@ -166,6 +166,8 @@ html {
 	background-color: $black;
   color: white;
 
+	overflow-y: auto;
+
 	@include bp("baby-bear") {
 		font-size: 125%;
 	}
@@ -178,10 +180,6 @@ html {
 	@include bp("grizzly-bear") {
 		font-size: 180%;
 	}
-}
-
-body {
-  overflow-y: auto;
 }
 
 h1,
